--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,9 @@
                 client_max_body_size 0;    
             }
 
+           location /webcam/ {
+                proxy_pass http://127.0.0.1:5150/webcam/;
+           }
             # redirect server error pages to the static page /50x.html
             error_page   500 502 503 504  /50x.html;
             location = /50x.html {
@@ -52,6 +55,9 @@
                 client_max_body_size 0;    
             }
 
+           location /webcam/ {
+                proxy_pass http://127.0.0.1:5250/webcam/;
+           }
             # redirect server error pages to the static page /50x.html
             error_page   500 502 503 504  /50x.html;
             location = /50x.html {
@@ -75,6 +81,10 @@
                 client_max_body_size 0;    
             }
 
+    
+           location /webcam/ {
+                proxy_pass http://127.0.0.1:5350/webcam/;
+           }
             # redirect server error pages to the static page /50x.html
             error_page   500 502 503 504  /50x.html;
             location = /50x.html {
